# mobilechat

./: README.md
apacheCordovaChatMobile/www/: index.html
apacheCordovaChatMobile/www/css/: mobiscroll.jquery.lite.min.css
apacheCordovaChatMobile/www/js/: mobiscroll.jquery.lite.min.js  my.js  notifier.js
ngrestChatMobile/: .project  CMakeLists.txt
ngrestChatMobile/.ngrest/: name  services
ngrestChatMobile/chatmobile/: CMakeLists.txt  CMakeLists.txt~
ngrestChatMobile/chatmobile/src/: chatMobile.cpp  chatMobile.h
zendFrameworkWssChat/: .buildpath  .project  composer.json
zendFrameworkWssChat/config/: application.config.php
zendFrameworkWssChat/config/autoload/: global.php
zendFrameworkWssChat/module/WebSocketServer/: Module.php  autoload_classmap.php
zendFrameworkWssChat/module/WebSocketServer/config/: module.config.php
zendFrameworkWssChat/module/WebSocketServer/src/WebSocketServer/Clases/: Ping.php  WebSocketServer.php
zendFrameworkWssChat/module/WebSocketServer/src/WebSocketServer/Controller/: WebSocketServerController.php
zendFrameworkWssChat/module/WebSocketServer/tests/: bootstrap.php  phpunit.xml
zendFrameworkWssChat/module/WebSocketServer/tests/WebSocketServer/: SampleTest.php
zendFrameworkWssChat/module/WebSocketServer/tests/WebSocketServer/Framework/: TestCase.php
